--- a/app/src/main/res/layout/job_post_comment_item.xml
+++ b/app/src/main/res/layout/job_post_comment_item.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingHorizontal="14dp"
+    android:background="@drawable/app_card_border"
+    android:layout_marginBottom="16dp"
     android:paddingTop="14dp">
 
     <LinearLayout
