--- a/app/src/main/res/layout/job_post_comments_activity.xml
+++ b/app/src/main/res/layout/job_post_comments_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".presentation.home.HomeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -35,6 +36,7 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:padding="@dimen/activity_horizontal_margin"
             android:id="@+id/rv_comments"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -45,6 +47,7 @@
             tools:listitem="@layout/job_post_comment_item" />
 
         <LinearLayout
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
