--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">32dp</dimen>
-    <dimen name="activity_vertical_margin">64dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">32dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
@@ -10,4 +10,8 @@
     <dimen name="fab_menu_item3_margin">238dp</dimen>
     <dimen name="preference_title_size">50sp</dimen>
     <dimen name="heading2_bottom_margin">32dp</dimen>
+
+    <dimen name="feed_ic_size">20dp</dimen>
+    <dimen name="feed_ic_margin">12dp</dimen>
+    <dimen name="feed_text_interaction_size">12sp</dimen>
 </resources>
