feat: updated PasswordResetActivity to use view model

--- a/app/src/main/res/layout/auth_password_reset_activity.xml
+++ b/app/src/main/res/layout/auth_password_reset_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="@color/background"
     >
 
     <ImageView
@@ -19,8 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password?"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        style="@style/Heading3"
         android:layout_below="@id/imageViewLock"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp" />
@@ -30,24 +30,40 @@
         android:layout_width="336dp"
         android:layout_height="49dp"
         android:layout_below="@id/textViewTitle"
+        style="@style/EditTextBase"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:background="@drawable/app_edittext_bg"
         android:hint="Enter your email"
         android:inputType="textEmailAddress" />
 
-    <Button
-        android:id="@+id/buttonResetPassword"
+    <!-- Login Button -->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Reset Password"
-        android:textSize="18sp"
-        android:background="@drawable/app_edittext_bg"
-        android:textColor="#FFFFFF"
+        android:layout_marginBottom="16dp"
         android:layout_below="@id/emailRecuperation"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="32dp" />
+        android:layout_marginTop="32dp">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonResetPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reset Password"
+            style="@style/ButtonPrimary"/>
+        .
+        <ProgressBar
+            android:id="@+id/prgLoading"
+            android:visibility="invisible"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:backgroundTint="@color/white"
+            style="@style/LoadingWhite"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
