--- a/app/src/main/res/layout/auth_password_reset_activity.xml
+++ b/app/src/main/res/layout/auth_password_reset_activity.xml
@@ -37,7 +37,7 @@
         android:hint="Enter your email"
         android:inputType="textEmailAddress" />
 
-    <!-- Login Button -->
+    <!-- Reset Button -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
