Feat: update ChangePassword acctivity

--- a/app/src/main/res/layout/auth_change_password_activity.xml
+++ b/app/src/main/res/layout/auth_change_password_activity.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:paddingVertical="@dimen/activity_vertical_margin"
+    android:paddingHorizontal="@dimen/activity_horizontal_margin"
+    android:background="@color/background">
 
     <ImageView
         android:id="@+id/imageViewLock"
@@ -46,16 +48,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Password"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="4dp"/>
+            style="@style/Label"/>
 
         <EditText
-            android:id="@+id/passwordChange"
+            android:id="@+id/txtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/app_edittext_bg"
-            android:padding="8dp"
+            style="@style/EditTextBase"
             android:inputType="textPassword"
             android:hint="New Password" />
     </LinearLayout>
@@ -70,26 +69,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Confirm Password"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="4dp"/>
+            style="@style/Label"/>
 
         <EditText
-            android:id="@+id/ConfirmedPassword"
+            android:id="@+id/txtPasswordConfirmation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/app_edittext_bg"
-            android:padding="8dp"
+            style="@style/EditTextBase"
             android:inputType="textPassword"
             android:hint="Confirm Password" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnConfirmChange"
+    <!-- Change password Button -->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/app_edittext_bg"
-        android:text="Confirm"
-        android:layout_marginTop="24dp" />
-
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="32dp">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnConfirmChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Confirm"
+            style="@style/ButtonPrimary"/>
+        .
+        <ProgressBar
+            android:id="@+id/prgLoading"
+            android:visibility="invisible"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:backgroundTint="@color/white"
+            style="@style/LoadingWhite"
+            />
+    </RelativeLayout>
 </LinearLayout>
