--- a/app/src/main/res/layout/skill_item_layout.xml
+++ b/app/src/main/res/layout/skill_item_layout.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -15,9 +16,27 @@
         android:textSize="18sp"
         android:textColor="#000" />
 
-    <ImageView
-        android:id="@+id/iconRight"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_delete" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iconEdit"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_edit"
+            android:layout_marginRight="8dp"
+            android:contentDescription="Edit"
+            app:tint="@color/purple_500" />
+
+        <ImageView
+            android:id="@+id/iconDelete"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_delete"
+            android:contentDescription="Delete"
+            app:tint="@color/error" />
+    </LinearLayout>
 </LinearLayout>
+
