--- a/app/src/main/res/layout/main_nav_header.xml
+++ b/app/src/main/res/layout/main_nav_header.xml
@@ -25,7 +25,7 @@
             app:cardElevation="0dp">
 
             <ImageView
-                android:id="@+id/iv_logo"
+                android:id="@+id/imgHeaderPicture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@mipmap/ic_launcher_round" />
@@ -38,6 +38,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/txtHeaderFullName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="User name"
@@ -45,7 +46,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/txtHeaderTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#8D8C8C"
