--- a/app/src/main/res/layout/main_post_item.xml
+++ b/app/src/main/res/layout/main_post_item.xml
@@ -28,51 +28,57 @@
             android:gravity="center"
             android:orientation="horizontal">
 
+            <LinearLayout
+                android:id="@+id/crdUserData"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginRight="12dp"
-                android:elevation="0dp"
-                app:cardCornerRadius="40dp">
-
-                <ImageView
-                    android:id="@+id/iv_user_image"
+                <androidx.cardview.widget.CardView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_launcher_background" />
-            </androidx.cardview.widget.CardView>
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginRight="12dp"
+                    android:elevation="0dp"
+                    app:cardCornerRadius="40dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/iv_user_image"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_launcher_background" />
+                </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/tv_user_name"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:textSize="14sp"
-                    android:text="John Doe"
-                    android:textColor="@color/black" />
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:textSize="14sp"
+                        android:text="John Doe"
+                        android:textColor="@color/black" />
 
 
-                <TextView
-                    android:id="@+id/tv_user_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textSize="10sp"
-                    android:text="Développeur Fullstack - Entreprisesdsdsd" />
+                    <TextView
+                        android:id="@+id/tv_user_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textSize="10sp"
+                        android:text="Développeur Fullstack - Entreprisesdsdsd" />
 
+                </LinearLayout>
             </LinearLayout>
 
 
