--- a/app/src/main/res/layout/main_post_item.xml
+++ b/app/src/main/res/layout/main_post_item.xml
@@ -26,12 +26,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/crdUserData"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
@@ -47,7 +49,7 @@
                         android:layout_width="36dp"
                         android:layout_height="36dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_launcher_background" />
+                        android:src="@drawable/profile_picture_placeholder" />
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
