--- a/app/src/main/res/layout/profile_experience_form_activity.xml
+++ b/app/src/main/res/layout/profile_experience_form_activity.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Modifier Expérience" />
+                android:text="Expériences" />
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
