--- a/app/src/main/res/layout/question_post_answer_item.xml
+++ b/app/src/main/res/layout/question_post_answer_item.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
-    android:elevation="0dp"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="5dp">
-    <FrameLayout
+    android:background="@color/white"
+    android:layout_marginBottom="16dp">
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/app_card_border"
-        >
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -90,19 +89,6 @@
                     android:layout_weight="0"
                     android:gravity="center"
                     android:orientation="horizontal">
-
-                    <Space
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_tag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Blog"
-                        android:textSize="10sp"
-                        style="@style/PostChip" />
 
                     <Space
                         android:layout_width="10dp"
@@ -194,7 +180,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_body"
+                android:id="@+id/txtCommentBody"
                 style="@style/Paragraph"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -203,108 +189,7 @@
                 android:paddingVertical="8dp"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum ipsum sed neque finibus, sed commodo nunc accumsan. Fusce malesuada pretium felis ut iaculis. Fusce bibendum dapibus pellentesque. In et mauris augue. Praesent porttitor arcu vel erat fringilla accums"
                 android:textSize="14sp" />
-
-            <ImageView
-                android:id="@+id/iv_blog_image"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:visibility="gone"
-                android:scaleType="centerCrop"
-                android:layout_marginBottom="8dp" />
-
-            <TextView
-                android:id="@+id/tv_tags"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="@color/grey_500"
-                android:text="#JEE #java #web #postgresql" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/ll_like"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="@dimen/feed_ic_size"
-                        android:layout_height="@dimen/feed_ic_size"
-                        android:layout_marginEnd="@dimen/feed_ic_margin"
-                        android:src="@drawable/ic_thumb_up"
-                        app:tint="@color/grey_700" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/feed_text_interaction_size"
-                        android:textColor="@color/grey_700"
-                        android:text="@string/like" />
-                </LinearLayout>
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <LinearLayout
-                    android:id="@+id/ll_comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="@dimen/feed_ic_size"
-                        android:layout_height="@dimen/feed_ic_size"
-                        android:layout_marginEnd="@dimen/feed_ic_margin"
-                        android:src="@drawable/ic_chat"
-                        app:tint="@color/grey_700"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/comments"
-                        android:textSize="@dimen/feed_text_interaction_size"
-                        android:textColor="@color/grey_700"/>
-                </LinearLayout>
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-
-                <LinearLayout
-                    android:id="@+id/ll_share"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="@dimen/feed_ic_size"
-                        android:layout_height="@dimen/feed_ic_size"
-                        android:layout_marginEnd="@dimen/feed_ic_margin"
-                        android:src="@drawable/ic_share"
-                        app:tint="@color/grey_700"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/feed_text_interaction_size"
-                        android:text="@string/share"
-                        android:textColor="@color/grey_700"/>
-                </LinearLayout>
-            </LinearLayout>
         </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
-
-    </FrameLayout>
-</com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
