--- a/app/src/main/res/layout/question_post_show_activity.xml
+++ b/app/src/main/res/layout/question_post_show_activity.xml
@@ -51,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginBottom="48dp">
+                android:layout_marginBottom="24dp">
 
 
                 <LinearLayout
@@ -273,12 +273,46 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="end"
+                android:layout_marginBottom="32dp">
+
+                <EditText
+                    android:id="@+id/txtNewAnswer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lines="3"
+                    android:hint="Share an answer"
+                    android:gravity="top|start"
+                    android:layout_marginBottom="16dp"
+                    android:textSize="14sp"
+                    style="@style/EditTextBase"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnAddAnswer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/ButtonPrimary"
+                    android:text="Post"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Answers"
                     style="@style/Heading4"
+                    android:layout_marginBottom="16dp"/>
+
+                <TextView
+                    android:id="@+id/tvNoAnswers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:text="No comments yet"
+                    style="@style/Paragraph"
                     android:layout_marginBottom="16dp"/>
 
 
