--- a/app/src/main/res/layout/question_post_show_activity.xml
+++ b/app/src/main/res/layout/question_post_show_activity.xml
@@ -233,9 +233,10 @@
                             app:tint="@color/grey_700"/>
 
                         <TextView
+                            android:id="@+id/tvPostAnswersCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/comments"
+                            android:text="0 Answers"
                             android:textSize="@dimen/feed_text_interaction_size"
                             android:textColor="@color/grey_700"/>
                     </LinearLayout>
@@ -285,7 +286,7 @@
                     android:hint="Share an answer"
                     android:gravity="top|start"
                     android:layout_marginBottom="16dp"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     style="@style/EditTextBase"/>
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnAddAnswer"
