feat: added report on feed posts

--- a/app/src/main/res/layout/main_post_item.xml
+++ b/app/src/main/res/layout/main_post_item.xml
@@ -117,6 +117,7 @@
                     android:text="5h" />
 
                 <ImageView
+                    android:id="@+id/btnReport"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_gravity="center"
