--- a/app/src/main/res/layout/main_post_item.xml
+++ b/app/src/main/res/layout/main_post_item.xml
@@ -316,13 +316,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
                 <LinearLayout
-                    android:id="@+id/ll_job_like"
+                    android:id="@+id/ll_job_apply"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_job_apply"
                         android:layout_width="@dimen/feed_ic_size"
                         android:layout_height="@dimen/feed_ic_size"
                         android:layout_marginEnd="@dimen/feed_ic_margin"
@@ -330,6 +331,7 @@
                         app:tint="@color/grey_700" />
 
                     <TextView
+                        android:id="@+id/tv_job_apply"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/feed_text_interaction_size"
